[gd_scene load_steps=6 format=3 uid="uid://demakvrdx5qr8"]

[ext_resource type="Script" path="res://assets/scripts/puzzle/puzzle_part.gd" id="1_68t0x"]
[ext_resource type="AudioStream" uid="uid://cfd0tme7a5lkn" path="res://assets/audio/sounds/SFX_Pickup_General.wav" id="2_rbllm"]
[ext_resource type="AudioStream" uid="uid://dt7g3f6bwou8n" path="res://assets/audio/sounds/SFX_Drop_General.wav" id="3_51sii"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_mw8bf"]
size = Vector2(62, 62)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_il85d"]
custom_solver_bias = 1.0
size = Vector2(62, 62)

[node name="PuzzlePart" type="CharacterBody2D"]
z_index = 1
motion_mode = 1
script = ExtResource("1_68t0x")
move_x = true
move_y = true
snap = 32
target_goal = 0
pickup_sound = ExtResource("2_rbllm")
drop_sound = ExtResource("3_51sii")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = SubResource("PlaceholderTexture2D_mw8bf")

[node name="Button" type="Button" parent="Sprite2D"]
self_modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -32.0
offset_top = -32.0
offset_right = -32.0
offset_bottom = -32.0
grow_horizontal = 2
grow_vertical = 2
action_mode = 0
flat = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_il85d")

[node name="PuzzleSoundPlayer" type="AudioStreamPlayer2D" parent="."]
max_polyphony = 5

[connection signal="button_down" from="Sprite2D/Button" to="." method="_on_button_button_down"]
[connection signal="button_up" from="Sprite2D/Button" to="." method="_on_button_button_up"]
